--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body{
 }
 
 div{
-    background-color: var(--dark grey);
+    background-color: var(--dark-grey);
     color: var(--white);
     max-width: 384px;
     text-align: center;
@@ -36,4 +36,35 @@ ul, li{
 img{
     width: 88px;
     border-radius: 50%;
+}
+h1{
+    font-size: 24px;
+    font-weight: 600;
+}
+strong{
+    font-size: 14px;
+    color: var(--neon-green);
+    font-weight: 150%;
+}
+p{
+    margin-block: 24px;
+    font-size: 14px;
+    line-height: 150%;
+}
+a{
+    display: block;
+    color: var(--white);
+    text-decoration: none;
+    background-color: var(--grey);
+    margin-bottom: 16px;
+    padding: 16px;
+    border-radius: 8px;
+    font-size: 14px;
+    font-weight: 700;
+}
+
+a:hover{
+    background-color: var(--neon-green);
+    color: var(--grey);
+    transition: 0.6s;
 }
