--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
     --black: #141414;
     --dark-grey: #1f1f1f;
 --white: #fff;
---neon-green: #c4f42a;
+--red: #f00909;
 --grey: #333;
 }
 
@@ -43,7 +43,7 @@ h1{
 }
 strong{
     font-size: 14px;
-    color: var(--neon-green);
+    color: var(--red);
     font-weight: 150%;
 }
 p{
@@ -64,7 +64,7 @@ a{
 }
 
 a:hover{
-    background-color: var(--neon-green);
-    color: var(--grey);
+    background-color: var(--red);
+    color: var(--black);
     transition: 0.6s;
 }
