--- a/style.css
+++ b/style.css
@@ -1,70 +1,73 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
 *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "inter", sans-serif;
-}
-
-:root{
-    --black: #141414;
-    --dark-grey: #1f1f1f;
---white: #fff;
---red: #f00909;
---grey: #333;
-}
-
-body{
-    background-color: var(--black);
-    height: 100svh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-div{
-    background-color: var(--dark-grey);
-    color: var(--white);
-    max-width: 384px;
-    text-align: center;
-    border-radius: 12px;
-}
-ul, li{
-    list-style: none;
+margin: 0;
+padding: 0;
+box-sizing: 0;
+font-family: "inter", sans-serif;
 }
 img{
     width: 88px;
     border-radius: 50%;
-}
-h1{
-    font-size: 24px;
-    font-weight: 600;
-}
-strong{
-    font-size: 14px;
-    color: var(--red);
-    font-weight: 150%;
-}
-p{
-    margin-block: 24px;
-    font-size: 14px;
-    line-height: 150%;
-}
-a{
-    display: block;
-    color: var(--white);
-    text-decoration: none;
-    background-color: var(--grey);
-    margin-bottom: 16px;
-    padding: 16px;
-    border-radius: 8px;
-    font-size: 14px;
-    font-weight: 700;
+    margin-bottom: 24px;
 }
 
+:root{
+  --black: #141414;
+  --dark-grey: #1f1f1f;
+  --white: #fff;
+  --blue-: #ff1d1d;
+  --grey-: #333;
+}
+body{
+  background-color: var(--black);
+  height: 100svh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  }
+div{
+  background-color: var(--dark-grey);
+ color: var(--white);
+  max-width: 384px;
+  padding: 40px;
+  text-align: center;
+  border-radius: 12px;
+}
+ul, li{
+list-style: none;
+
+}
+h1{
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 150%;
+  margin-bottom: 4px;
+}
+strong{
+  font-size: 14px;
+  color: var(--blue-);
+  line-height: 150%;
+
+}
+p{
+  margin-block: 24px;
+  font-size: 14px;
+  line-height: 150%;
+}
+a{
+  display: block;
+  color: var(--white);
+  text-decoration: none;
+  background-color: var(--grey-);
+  margin-bottom: 16px ;
+  padding: 12px;
+  border-radius: 8px;
+  font-size: 14px;
+  font-weight: 700;
+}
 a:hover{
-    background-color: var(--red);
-    color: var(--black);
-    transition: 0.6s;
+  background-color: var(--blue-);
+  color: var(--grey-);
+  transition: 0.6s;
 }
